--- a/site.html
+++ b/site.html
@@ -10,6 +10,14 @@
 <body>
   <h1 class="titulo">Seja Bem Vindo | Pedro Dev</h1>
 
+
+  <main>
+    <header>
+      LOGADO:<span class="player"></span>
+    </header>
+  
+  </main>
+
   <div class="projetos">
     <h2 class="tituloP">Caso queira ver meus projetos ou baixalos:</h2>
     <h3>Calculadora: <a class="cal" href="https://pedrogalotti.github.io/CalculadoraX/" target="_blank">Clique Aqui</a></h3>
@@ -20,15 +28,16 @@
 
   <div class="linguagens">
     <h2>Linguagens de programação que possa te interessar.</h2>
-    <p><strong>PYTHON: <a class="Caixa" href="https://www.python.org/" target="_blank">Clique Aqui</a></strong></p>
-    <p><strong>HTML: <a class="Caixa" href="https://blog.betrybe.com/html/" target="_blank">Clique Aqui</a></strong></p>
-    <p><strong>CSS: <a class="Caixa" href="https://blog.betrybe.com/css/" target="_blank">Clique Aqui</a></strong></p>
-    <p><strong>PHP: <a class="Caixa" href="https://www.hostinger.com.br/tutoriais/o-que-e-php-guia-basico" target="_blank">Clique Aqui</a></strong></p>
-    <p><strong>JAVA: <a class="Caixa" href="https://www.oracle.com/br/java/" target="_black">Clique Aqui</a></strong></p>
-    <p><strong>JAVA SCRIPT: <a class="Caixa" href="https://developer.mozilla.org/pt-BR/docs/Learn/JavaScript/First_steps/What_is_JavaScript" target="_blank">Clique Aqui</a></strong></p>
-    <p><strong>LUA: <a class="Caixa" href="https://www.luiztools.com.br/post/introducao-a-linguagem-de-programacao-lua/" target="_blank">Clique Aqui</a></strong></p>
+    
+    <h3>HTML:<a class="Caixa" href="https://github.com/pedrogalotti/Site-Novo">68</a></h3>
+    <h3>CSS:<a class="Caixa" href="https://github.com/pedrogalotti/Site-Novo">68</a></h3>
+    <h3>PHP:<a class="Caixa" href="https://github.com/pedrogalotti/Site-Novo">68</a></h3>
+    <h3>JS: <a class="Caixa" href="https://github.com/pedrogalotti/Site-Novo">568</a></h3>
+    <h3>JAVA: <a class="Caixa" href="https://github.com/pedrogalotti/Site-Novo">OI</a></h3>
+    <h3>LUA: <a class="Caixa" href="" >568</a></h3>
+    <h3>PYTHON: <a class="Caixa" href="">568</a></h3>
   </div>
-
+ 
   <div class="cntt"><h3>Contatos | Redes Sociais | Download</h3>
     <p class="p"><strong>Caso queira me mandar uma mensagem ou me seguir nas redes Sociais
       clique em "IR"</strong></p>
@@ -50,5 +59,6 @@
     <img class="php1" src="progra3.jfif" >
     <img class="lua" src="progra4.png" width="335px">
   </div>
+  <script src="site.js"></script>
 </body>
 </html>
