--- a/avisos.html
+++ b/avisos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -30,4 +30,4 @@
 
   <div class="celo"><h2><strong>Criado por PedroDev</strong></h2></div>
 </body>
-</html>
+</html> -->
